2007-09-11 Yusei
* Add two interaction workflows for ticket and event to update local roles after editing.

2007-09-11 Romain
* Add Visit portal type
* Remove hardcoded values

2007-09-11 Thierry
* Improve Ticket workflow (add worklists)
* Add missing portal type actions

2007-09-10 Thierry
* Improve Event workflow
* Add causality relations between Events

2007-08-22 JPS
* Slight refactoring

2007-08-13 Jerome
* Remove portal type actions that are now defined as global actions

2007-02-15 Rafael
* Added Internal Request.

2006-05-18 Romain
* Fix naming conventions.

2006-04-25 Romain
* Remove News Item
* Again, change state variable to simulation_state for event_workflow and sale_opportunity_workflow.
* Add subcategories in portal_categories/resource.
* Modify all forms.
* Event and Ticket are now subclasses of Movement.

2006-05-17 Romain
* Remove catalog method z_related_translated_event_state
* Remove related key translated_event_state_title | translation/translated_message/z_related_translated_event_state

2006-05-15 Alex
* Update maintainers.

2006-03-27 kevin
* Don't encode MailMessage_view body, it's done automatticaly now.

2006-03-03 kevin
* Display an encoded UTF-8 body for Mail Message.

2006-02-22 kevin
* Fix bad default lisbox parameters.

2006-06-02 Jerome
* add missing 'follow_up' base category.
* improve 'Respond' feature in event workflow
* make filtering work in Event Module + other small UI fixes.

2005-11-11 Romain
* Correct naming convention.

2005-11-05 Romain
* Correct naming convention.

2005-10-20 Romain
* Correct naming convention.

2005-09-05 Romain (1.0rc5)
* Change state variable to simulation_state for event_workflow and sale_opportunity_workflow.

2005-09-02 Romain (1.0rc4)
* Added all _action transitions in workflows.

2005-08-29 Romain (1.0rc3)
* Added missing forms.
* Clean portal type definition.
* Change module id (event->event_module, etc)
* Move Project* skins to folder erp5_project (included in business template erp5_project).