@@ -81,7 +81,7 @@
       <dictionary>
         <item>
             <key> <string>text</string> </key>
-            <value> <string>string:${object_url}/Meeting_view</string> </value>
+            <value> <string>string:${object_url}/Ticket_view</string> </value>
         </item>
       </dictionary>
     </pickle>
